31. 상속과 조합